@@ -1,3 +1,5 @@
+- ask which drive to install bootloader if we don't really know which is first
+  bios drive (cf #38829)
 - fix reading alternatives in install
 
 Version 10.17 - 20 March 2008
